Fixed alignment

--- a/src/app/styles/work.scss
+++ b/src/app/styles/work.scss
@@ -26,7 +26,7 @@
     }
     div{
       width: 60%;
-      text-align: center;
+      text-align: left;
     }
   }
 }
